[package]
name = "voltage_iec104"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "IEC 60870-5-104 protocol implementation for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EvanL1/voltage-iec104"
keywords = ["iec104", "iec60870", "scada", "industrial", "protocol"]
categories = ["network-programming", "embedded"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["net", "sync", "time", "io-util", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Byte manipulation
bytes = "1"

# Error handling
thiserror = "2"

# Optional: Tracing
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
tracing-support = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
